--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,16 @@ fonttools==4.30.0
 joblib==1.1.0
 kiwisolver==1.3.2
 matplotlib==3.5.1
+numpy==1.21.5
 packaging==21.3
-pandas==1.4.1
+pandas==1.3.5
 Pillow==9.0.1
+pkg-resources==0.0.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
 scikit-learn==1.0.2
-scipy==1.8.0
+scipy==1.7.3
 six==1.16.0
 sklearn==0.0
 threadpoolctl==3.1.0
